style: ensure proper text color for EmptyInvoices component in dark mode

--- a/src/components/EmptyInvoices/EmptyInvoices.module.scss
+++ b/src/components/EmptyInvoices/EmptyInvoices.module.scss
@@ -44,7 +44,8 @@
     color: variable.$white;
   }
 
-  .text {
+  .text,
+  .textFilter {
     color: variable.$lavender;
   }
 }
